# nhs-notify-supplier-api

./: .editorconfig  .editorconfig-checker.json  .env.template  .gitignore  .gitleaksignore  .markdownlint.jsonc  .markdownlintignore  .npmrc  .syncpackrc  .tool-versions  CONTRIBUTING.md  Makefile  README.md  VERSION  eslint.config.mjs  nhsnotifysupplier.0.2.0-20250704.nupkg  orval.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.code-workspace  pyproject.toml  pytest.ini  redocly.yaml  tsconfig.base.json
.devcontainer/: devcontainer copy.json  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  (+3 more)
tests/e2e-tests/: README.md  endpoint_tests.py  get_letters_tests.py  pyproject.toml  pytest.ini
tests/e2e-tests/api/: endpoint_tests.py  get_letters_tests.py  test-get-letter-status.py  test-get-letters.py  test_endpoint.py
tests/e2e-tests/api/authentication/: test-401-errors.py  test-403-errors.py  test_401_errors.py
tests/e2e-tests/api/content_types/: test_406_errors.py
tests/e2e-tests/api/data/: test-get-letter_data.py  test_get_letter_data.py
tests/e2e-tests/api/headers/: test-x-request-id.py  test_x_request_id.py
tests/e2e-tests/api/letters/: conftest.py  test-get-letter-status.py  test-multiple-letter-status.py  test-update-letter-status.py  test_get_letter_status.py  test_get_list_of_letters.py  test_multiple_letter_status.py  test_update_letter_status.py
tests/e2e-tests/api/mi/: test-create-mi-record.py  test_create_mi_record.py  test_get_mi_information.py
tests/e2e-tests/authentication/: test-401-errors.py
tests/e2e-tests/lib/: assertions.py  authentication.py  constants.py  errorhandler.py  fixtures.py  generators.py  letters.py  secret.py
tests/e2e-tests/partials/authentication/: test_401_invalid.rst
(+1551 files in other folders)
