[tool.poetry]
name = "e2e-tests"
version = "0.1.0"
description = ""
authors = ["namitha.prabhu <namitha.prabhu2@nhs.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pytest-nhsd-apim = "5.0.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
