[tool.poetry]
name = "supplier-api-e2e-tests"
version = "0.1.0"
description = "Python Tests for Supplier API"
authors = ["NHS Digital"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pytest-nhsd-apim = "5.0.6"
pytest-rerunfailures = "16.1"
pytest-xdist = ">=3.6.1"
notifications-python-client = ">=10.0.1"
polling = ">=0.3.2"
urllib3 = ">=2.6.3,<3"

[build-system]
requires = [
  "poetry-core>=2.0.0,<3.0.0",
  "wheel==0.46.2"
]
build-backend = "poetry.core.masonry.api"
